@@ -1,5 +1,9 @@
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.537 2006/01/27 22:49:10 rocket Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.538 2006/01/27 22:57:16 wolf31o2 Exp $
+
+  27 Jan 2006; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
+  targets/support/create-iso.sh:
+  Fixing HFS bless on PPC64.  This is catalyst 2.0_rc26.
 
   27 Jan 2006; Eric Edgar <rocket@gentoo.org>
   +livecd/cdtar/yaboot-1.3.11-ppc-cdtar.tar.bz2,
